--- a/app/views/board_columns/_board_column.html.erb
+++ b/app/views/board_columns/_board_column.html.erb
@@ -1,7 +1,7 @@
 <div class="board-column" data-sortable-column-id-value="<%= board_column.id %>">
   <%= render partial: 'board_columns/column_header', locals: { board_column: board_column } %>
 
-  <div id= <%= dom_id(board_column, :column_body) %>, class="board-column-body", data-sortable-target="cardsContainer">
+  <div id= <%= dom_id(board_column, :column_body) %> class="board-column-body" data-sortable-target="cardsContainer">
     <% board_column.cards.order(:position).each do |card| %>
       <%= render partial: 'cards/card', locals: { card: card } %>
     <% end %>
