--- a/app/views/board_columns/_board_column.html.erb
+++ b/app/views/board_columns/_board_column.html.erb
@@ -1,15 +1,17 @@
-<div class="board-column" data-sortable-column-id-value="<%= board_column.id %>">
-  <%= render partial: 'board_columns/column_header', locals: { board_column: board_column } %>
+<%= turbo_frame_tag dom_id(board_column, :destroy) do %>
+  <div class="board-column" data-sortable-column-id-value="<%= board_column.id %>">
+    <%= render partial: 'board_columns/column_header', locals: { board_column: board_column } %>
 
-  <div id= <%= dom_id(board_column, :column_body) %> class="board-column-body" data-sortable-target="cardsContainer">
-    <% board_column.cards.order(:position).each do |card| %>
-      <%= render partial: 'cards/card', locals: { card: card } %>
-    <% end %>
-  </div>
+    <div id= <%= dom_id(board_column, :column_body) %> class="board-column-body" data-sortable-target="cardsContainer">
+      <% board_column.cards.order(:position).each do |card| %>
+        <%= render partial: 'cards/card', locals: { card: card } %>
+      <% end %>
+    </div>
 
-  <div class="board-column-footer">
-    <%= link_to new_card_url(board_column_id: board_column.id), class: 'text-success fs-2' do %>
-      <div class="fa-solid fa-plus"></div>
-    <% end %>
+    <div class="board-column-footer">
+      <%= link_to new_card_url(board_column_id: board_column.id), class: 'text-success fs-2' do %>
+        <div class="fa-solid fa-plus"></div>
+      <% end %>
+    </div>
   </div>
-</div>
+<% end %>
